--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="Nlu37tJYKGJ7JYs3NG8d0nC_kP9kUAUorRs1P8cGFjE" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Looking for microwave repair in San Jose? Hire professional appliance repair technicians to save time, money, and ensure your microwave is fixed safely and efficiently.">
